# xpredict

./: .env.example  .env.prod.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  PHASES.md  README-SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: linear.shared.env  settings.json
backend/: .dockerignore  .env.example  CONVENTIONS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_foundations.py  0002_phase2_auth.py  0003_phase3_wallet_ledger.py  0003_phase4_markets.py  0004_phase3_wallet_ledger.py  0004_phase6_polymarket_sync.py  0005_phase5_bets.py  0006_merge_phase5_phase6.py  0007_phase7_grace_period.py  0007_phase8_user_created_at.py  0008_phase8_user_created_at.py  0009_phase10_tenant_config.py  0010_phase12_resolution_and_stake_limits.py  0011_livebets_bridge.py  0011_phase13_market_groups.py  0012_early_close.py
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/admin/: __init__.py  csv_export.py  export_router.py  kpi_router.py  kpi_schemas.py  kpi_service.py  router.py  schemas.py  service.py
backend/app/api/: __init__.py  health.py
backend/app/auth/: __init__.py  admin_router.py  deps.py  email.py  manager.py  models.py  rate_limit.py  router.py  schemas.py  strategy.py
backend/app/bets/: __init__.py  adapters.py  constants.py  exceptions.py  market_port.py  models.py  portfolio.py  router.py  schemas.py  service.py
backend/app/branding/: admin_router.py  models.py  repo.py  router.py  schemas.py
backend/app/catalog/: router.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  exceptions.py  health.py  logging.py  redis.py  sentry.py
backend/app/core/audit/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/core/feature_flags/: __init__.py  models.py  service.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/integrations/: __init__.py  market_source.py
backend/app/integrations/livebets/: __init__.py  admin_router.py  client.py  constants.py  models.py  router.py  schemas.py  service.py
backend/app/integrations/polymarket/: __init__.py  adapter.py  client.py  schemas.py  tasks.py
backend/app/integrations/slotslaunch/: __init__.py  client.py  router.py  schemas.py  service.py
backend/app/markets/: __init__.py  enums.py  models.py  router.py  schemas.py  service.py
backend/app/realtime/: __init__.py  manager.py  publisher.py  router.py  subscriber.py
backend/app/routers/: __init__.py  health.py
backend/app/settlement/: __init__.py  adapters.py  constants.py  event_router.py  event_schemas.py  event_service.py  market_port.py  payout.py  plan.py  router.py  schemas.py  service.py
backend/app/wallet/: __init__.py  admin_router.py  constants.py  exceptions.py  models.py  reconcile.py  router.py  schemas.py  service.py
backend/scripts/: lint_money_columns.py
backend/tests/: conftest.py  test_gitleaks_blocks_secret.py  test_health.py  test_money_lint.py  test_sentry_init.py  test_sentry_test_endpoint.py  test_sentry_test_task.py  test_settings.py
backend/tests/admin/: _helpers.py  conftest.py  test_audit_log.py  test_auth_negative.py  test_ban_unban.py  test_csv_export.py  test_kpi.py  test_tenant_config.py  test_tenant_config_negative.py  test_user_detail.py  test_user_list.py
backend/tests/auth/: conftest.py  test_admin_bearer.py  test_create_admin_script.py  test_demo_login.py  test_email_enumeration.py  test_email_verification.py  test_login.py  test_logout.py  test_migration_0002.py  test_models.py  test_password_hashing_offload.py  test_password_reset.py  test_rate_limit.py  test_refresh_rotation.py  test_register.py  test_settings_phase2.py  test_signup_bonus_on_verify.py
backend/tests/bets/: test_bet_model.py  test_bet_router.py  test_market_port.py  test_place_bet.py  test_portfolio.py  test_sell_position.py
backend/tests/branding/: test_branding_public.py
backend/tests/catalog/: _factories.py  conftest.py  test_catalog_cache.py  test_catalog_router.py  test_categories.py  test_event_detail.py  test_wiring.py
backend/tests/core/: test_audit_immutability.py  test_feature_flags.py
backend/tests/fixtures/gamma/: events_multi_outcome.json  events_single_market.json  tags_categories.json
backend/tests/fixtures/synthetic_secrets/: .env.fake  .gitleaksignore-note.md
backend/tests/integration/: test_phase5_e2e.py
backend/tests/integrations/livebets/: test_livebets_bridge.py  test_livebets_router.py  test_livebets_security.py  test_migration_0011.py
backend/tests/integrations/slotslaunch/: test_casino_router.py
backend/tests/markets/: conftest.py  test_activity_feed.py  test_admin_router.py  test_migration_0011.py  test_models.py  test_price_history.py  test_protocol.py  test_public_router.py  test_service.py  test_update_market_publishes.py
backend/tests/polymarket/: conftest.py  test_adapter.py  test_client.py  test_detect_resolution.py  test_home_list.py  test_poll_publishes.py  test_schemas.py  test_tasks.py
backend/tests/realtime/: __init__.py  conftest.py  test_connection_cap.py  test_ws_fanout.py  test_ws_isolation.py  test_ws_reconnect.py
backend/tests/seed/: test_seed_bets.py  test_seed_bets_db.py  test_seed_demo_e2e.py  test_seed_markets.py  test_seed_markets_db.py  test_seed_odds_db.py  test_seed_reset_db.py  test_seed_resolutions_db.py  test_seed_users.py  test_seed_users_db.py
backend/tests/settlement/: test_derive_event_status.py  test_event_mirrored.py  test_event_router.py  test_event_service.py  test_event_settle_router.py  test_force_settle.py  test_market_resolve_port.py  test_payout.py  test_plan.py  test_resolve_market.py  test_settlement_router.py
backend/tests/wallet/: conftest.py  test_atomicity.py  test_concurrent_transfers.py  test_idempotency.py  test_migration_0003.py  test_models.py  test_money_serialization.py  test_no_user_to_user.py  test_recharge.py  test_reconcile.py  test_signup_bonus.py  test_stripe_stub.py  test_wallet_creation.py
(+686 files in other folders)
