[project]
name = "xpredict-backend"
version = "0.1.0"
description = "XPredict backend — white-label prediction market platform (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core web
    "fastapi[standard]>=0.115.7,<0.116.0",
    "uvicorn[standard]>=0.32,<0.36",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
    # Database (async app driver + sync driver for Alembic)
    "sqlalchemy[asyncio]>=2.0.43,<2.1",
    "asyncpg>=0.30,<0.32",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.14,<2.0",
    # Infra / async work (configured in Phase 1, business tasks land Phase 2+)
    "redis>=5.0,<6.0",
    "celery>=5.5,<5.6",
    # Observability
    "structlog>=24.4,<26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.26",
    "httpx>=0.28,<0.29",
    "ruff>=0.7,<0.9",
    "mypy>=1.13,<2.0",
]

# This is an application, not a distributable package — uv only manages the env + deps.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Celery ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

# Celery's task decorator is untyped upstream; allow it where tasks are defined.
[[tool.mypy.overrides]]
module = ["app.celery_app"]
disallow_untyped_decorators = false
